[Style] - 배송설정 레이아웃 수정

--- a/src/utils/styles/DeliverySetting.scss
+++ b/src/utils/styles/DeliverySetting.scss
@@ -37,4 +37,7 @@ $padding-side: 8px;
   .delivery-toggle {
     padding: 15px;
   }
+  .preorder-container {
+    padding-top: $padding-side;
+  }
 }
