[Feat] 상품 정보고시 기능 구현 Clode #19
- 정보고시 생성 마다 번호 증가
- 정보고시 삭제 기능, 한개만 남았을 때는 경고 표시
- 정보고시 항목 추가,삭제 기능 구현

--- a/src/utils/styles/Main.scss
+++ b/src/utils/styles/Main.scss
@@ -44,7 +44,7 @@ $default-padding: 10px;
   .sirloin-form {
     grid-area: form;
     overflow: auto;
-    padding: $default-padding;
+    padding: 20px;
     .test {
       margin: 1px;
       height: 300px;
