[Fix] scss flex-end 에러 수정, 상대경로 -> 절대경로

--- a/src/utils/styles/ItemOptionLayout.scss
+++ b/src/utils/styles/ItemOptionLayout.scss
@@ -4,7 +4,7 @@
 
   .delete-btn-area {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     button {
       margin-bottom: 10px;
       padding: 5px 12px;
