[Feat] - 단일 달력 추가 및 스타일 수정 close #27

--- a/src/utils/styles/DeliverySetting.scss
+++ b/src/utils/styles/DeliverySetting.scss
@@ -23,8 +23,9 @@ $padding-side: 8px;
 
   .delivery-title {
     max-width: 120px;
-    padding: $padding-side;
+    padding: 15px $padding-side;
     background-color: rgba(245, 240, 240);
+    line-height: 20px;
   }
   .delivery-title:nth-child(-n + 4),
   .delivery-toggle {
