--- a/src/utils/styles/Durationconfig.scss
+++ b/src/utils/styles/Durationconfig.scss
@@ -10,25 +10,27 @@ $outerBorder: 2px solid lightgray;
 }
 .duration-config-title {
   @include font-bold();
-  padding: 5px 10px 5px;
+  padding: 15px;
   border-bottom: $innerBorder;
 }
 .duration-config {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 6fr;
   grid-template-rows: 1fr 1fr;
 
   .duration-title {
     background-color: rgb(245, 240, 240);
     padding: 10px;
-    font-weight: bold;
+    font-weight: 400;
     border-right: $innerBorder;
+    max-width: 140px;
   }
   .duration-title:nth-child(1) {
     border-bottom: $innerBorder;
   }
 
   .duration-config-detail {
+    line-height: 30px;
     padding: 10px;
   }
 
