--- a/src/utils/styles/PartThree.scss
+++ b/src/utils/styles/PartThree.scss
@@ -27,5 +27,17 @@
         cursor: pointer;
       }
     }
+    .delete-btn {
+      margin: 0 25px;
+      padding: 5px 12px;
+      width: 60px;
+      font-size: 12px;
+      color: red;
+      border: 1px solid red;
+      border-radius: 3px;
+      background-color: #fff;
+      cursor: pointer;
+      float: right;
+    }
   }
 }
