[Feat] 옵션 추가 기능구현 및 이미지 레이아웃 수정

--- a/src/utils/styles/PartThree.scss
+++ b/src/utils/styles/PartThree.scss
@@ -27,17 +27,20 @@
         cursor: pointer;
       }
     }
-    .delete-btn {
-      margin: 0 25px;
-      padding: 5px 12px;
-      width: 60px;
-      font-size: 12px;
-      color: red;
-      border: 1px solid red;
-      border-radius: 3px;
-      background-color: #fff;
-      cursor: pointer;
-      float: right;
+
+    .delete-inven-area {
+      height: 40px;
+      .delete-btn {
+        margin: 0 25px;
+        padding: 10px 20px;
+        font-size: 12px;
+        color: red;
+        border: 1px solid red;
+        border-radius: 3px;
+        background-color: #fff;
+        float: right;
+        cursor: pointer;
+      }
     }
   }
 }
