[Feat] - 토글버튼 기능 구현 close #32

--- a/src/utils/styles/DeliverySetting.scss
+++ b/src/utils/styles/DeliverySetting.scss
@@ -34,11 +34,21 @@ $padding-side: 8px;
   .delivery-title:nth-child(-n + 5) {
     border-right: $border;
   }
+  .delivery-toggle:nth-child(2),
+  .delivery-title:nth-child(1) {
+    border-bottom: none;
+  }
 
   .delivery-toggle {
     padding: 15px;
   }
   .preorder-container {
     padding-top: $padding-side;
+  }
+  .show {
+    display: block;
+  }
+  .hide {
+    display: none;
   }
 }
