--- a/src/utils/styles/Calendar.scss
+++ b/src/utils/styles/Calendar.scss
@@ -1,6 +1,10 @@
 .calendar-wrapper {
   display: flex;
   padding: 20px 0px;
+
+  span {
+    margin-left: 8px;
+  }
 }
 
 .react-datepicker-wrapper {
@@ -12,6 +16,7 @@
   border-radius: 4px;
   border: 1px solid lightgray;
   width: 150px;
+  height: 40px;
 
   i {
     margin-left: 10px;
