--- a/src/utils/styles/ItemOptionLayout.scss
+++ b/src/utils/styles/ItemOptionLayout.scss
@@ -28,8 +28,14 @@
       justify-content: center;
       align-items: center;
       height: 220px;
+      flex-wrap: wrap;
+      overflow: hidden;
       background-color: #f5f5f5;
       border: 1px solid #dcdcdc;
+
+      .onload-image {
+        object-fit: cover;
+      }
 
       .input-image-btn {
         border-radius: 5px;
