--- a/src/utils/styles/Calendar.scss
+++ b/src/utils/styles/Calendar.scss
@@ -3,22 +3,24 @@
   padding: 20px 0px;
 
   span {
-    margin-left: 8px;
+    // margin-left: 8px;
+    margin-right: 15px;
   }
 }
 
 .react-datepicker-wrapper {
-  width: 150px;
+  width: 160px;
   margin-left: 10px;
 }
 .custom-input {
   background-color: #fff;
   border-radius: 4px;
   border: 1px solid lightgray;
-  width: 150px;
+  width: 140px;
   height: 40px;
+}
 
-  i {
-    margin-left: 10px;
-  }
+.calendar-icon {
+  position: relative;
+  left: -15px;
 }
