--- a/src/utils/styles/ProductDefaultInfo.scss
+++ b/src/utils/styles/ProductDefaultInfo.scss
@@ -57,6 +57,7 @@ $defaultinfo-title-background: #fbfbfb;
 .filter-tag-content {
   grid-area: filter-tag-content;
   padding: 10px 20px;
+  position: relative;
 }
 
 .product-name-title {
@@ -122,4 +123,144 @@ $defaultinfo-title-background: #fbfbfb;
 .product-total-stock-content {
   grid-area: product-total-stock-content;
   padding: 20px;
+}
+
+.search-button {
+  padding: 10px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #352f6b;
+  margin: 12px;
+  margin-right: 20px;
+  border-radius: 3px;
+  position: absolute;
+  right: 3px;
+  top: 3px;
+  bottom: 3px;
+  background-color: #ffffff;
+  max-height: 30px;
+}
+
+.filter-div {
+  width: 730px;
+  height: 150px;
+  margin: auto;
+  margin-top: 10px;
+  background-color: #fff;
+  border: 1px solid #a09d9d5e;
+  border-radius: 3px;
+  overflow-y: scroll;
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 3.5px;
+    background-color: #848688;
+
+    &:hover {
+      background-color: #464747;
+    }
+  }
+
+  .filter-search {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    div {
+      width: 5rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 30px;
+      margin: 3px;
+    }
+  }
+}
+
+.non-selected-tag {
+  background-color: #e8f7d4;
+  border-radius: 3px;
+  border: none;
+  height: 30px;
+  width: 100%;
+  cursor: pointer;
+}
+
+.selected-tag-wrapper {
+  width: 730px;
+  height: 150px;
+  margin: auto;
+  margin-top: 10px;
+  background-color: #fff;
+  border: 1px solid #a09d9d5e;
+  border-radius: 3px;
+  overflow-y: scroll;
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 3.5px;
+    background-color: #848688;
+
+    &:hover {
+      background-color: #464747;
+    }
+  }
+  span {
+    display: inline-block;
+    margin: 10px;
+    margin-top: 20px;
+  }
+}
+
+.selected-tag-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  div {
+    width: 6rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    margin: 10px;
+    margin-right: 0px;
+  }
+}
+
+.selected-tag {
+  background-color: #e8f7d4;
+  border-radius: 3px;
+  border: none;
+  height: 30px;
+  width: 100%;
+  cursor: pointer;
+}
+
+.non-existent-keyword {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.flex-start {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  div {
+    width: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    margin: 3px;
+  }
 }
