--- a/src/utils/styles/Infocard.scss
+++ b/src/utils/styles/Infocard.scss
@@ -32,7 +32,7 @@ $border-color: #d3d3d3;
   .add-option-btn {
     border: 2px solid $border-color;
     background-color: transparent;
-    color: #00008b;
+    color: #352f6b;
     font-weight: bold;
     cursor: pointer;
     height: 35px;
