--- a/src/utils/styles/Main.scss
+++ b/src/utils/styles/Main.scss
@@ -76,7 +76,7 @@ $default-padding: 10px;
     font-weight: inherit;
     font-size: 13px;
     width: 70px;
-    background-color: rgb(40, 6, 161);
+    background-color: #352f6b;
     color: white;
     border: none;
     border-radius: 3px;
