--- a/src/utils/styles/toggleBtn.scss
+++ b/src/utils/styles/toggleBtn.scss
@@ -1,4 +1,4 @@
-$color_checkbox_toggled: #322a77;
+$color_checkbox_toggled: #352f6b;
 $color_checkbox_default: #8e8e93;
 $bgcolor_checkbox_toggled: #a188b9;
 $bgcolor_checkbox_default: #8d8c8c;
