--- a/src/utils/styles/Calendar.scss
+++ b/src/utils/styles/Calendar.scss
@@ -3,14 +3,15 @@
   padding: 20px 0px;
 
   span {
-    // margin-left: 8px;
     margin-right: 15px;
+    margin-top: 5px;
   }
 }
 
 .react-datepicker-wrapper {
   width: 160px;
   margin-left: 10px;
+  cursor: pointer;
 }
 .custom-input {
   background-color: #fff;
@@ -23,4 +24,14 @@
 .calendar-icon {
   position: relative;
   left: -15px;
+}
+
+.time-calendar-wrapper {
+  display: flex;
+  padding: 20px 0px;
+
+  span {
+    margin-right: 15px;
+    margin-top: 10px;
+  }
 }
