--- a/src/utils/styles/CategorySelectList.scss
+++ b/src/utils/styles/CategorySelectList.scss
@@ -34,6 +34,9 @@
     display: inline-block;
     padding: 0.7rem;
   }
+  span:nth-last-child(1) {
+    cursor: pointer;
+  }
 }
 
 .category-not-selected {
