--- a/src/utils/styles/ImageUpload.scss
+++ b/src/utils/styles/ImageUpload.scss
@@ -7,7 +7,7 @@
     padding: 10px 20px;
     border-bottom: 1px solid #4545453a;
     font-weight: bold;
-    font-size: 13px;
+    font-size: 17.6px;
   }
 
   .imgAddContainer {
@@ -17,7 +17,7 @@
     .imageAddBtn {
       height: 33px;
       padding: 7px 20px;
-      border: 1px solid;
+      border: 1px solid #352f6b;
       background-color: white;
       font-size: 12px;
       cursor: pointer;
@@ -33,7 +33,7 @@
         margin-left: 12px;
         padding: 2px 4px;
         background-color: white;
-        border: 1px solid #a09d9d5e;
+        border: 1px solid #352f6b;
         border-radius: 15px;
         line-height: 10px;
         font-size: 9px;
