--- a/src/utils/styles/Productinfo.scss
+++ b/src/utils/styles/Productinfo.scss
@@ -3,25 +3,25 @@ $default-border: 2px solid #d3d3d3;
   margin: 20px auto 20px;
   border: 2px solid #d3d3d3;
   .productinfo-title {
-    font-size: 20px;
+    font-size: 17.6px;
     font-weight: bold;
     padding: 15px;
   }
 }
 
 .infocard-container {
-  border: $default-border;
-  background-color: #d3d3d3;
+  border-top: $default-border;
+  background-color: #efefef;
   padding: 15px;
 }
 
 .infocard-add-btn {
-  border: 2px solid #00008b;
+  border: 2px solid #352f6b;
   width: 100%;
   height: 40px;
   cursor: pointer;
   background-color: transparent;
-  color: #00008b;
+  color: #352f6b;
   font-weight: bold;
   margin-top: 10px;
   margin-bottom: 15px;
